# nixgan

./: LICENSE  README.md  flake.nix  shell.nix
ganbot/: Cargo.toml
ganbot/src/: generator.rs  main.rs
jax-diffusion/: prompts.txt  run.py  test.sh
